Recue size of H1 to prevent wrap on small screens

--- a/css/styles.css
+++ b/css/styles.css
@@ -65,7 +65,7 @@ https://css-tricks.com/pseudo-element-roundup/ */
 .site-logo h1 {
   margin: 0;
   padding: 0;
-  font-size: 3.25em;
+  font-size: 2.9em;
   font-family: 'steelworks', serif;
   font-weight: normal;
   color: #ece024;
